--- a/styles/_followMe.scss
+++ b/styles/_followMe.scss
@@ -54,34 +54,56 @@
   background-color: #fff;
   margin-top: 22px;
 
+  &__group {
+    display: flex;
+    position: relative;
+    margin-bottom: 20px;
+    flex-direction: column;
+  }
 
+  &__label {
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    background-color: #fff;
+    padding: 0 5px;
+    font-size: 14px;
+    color: #000;
+  }
+
+  &__input,
+  &__textarea {
+    padding: 10px;
+    border: 1px solid #000;
+    font-size: 16px;
+    outline: none;
+  }
 }
 
-.form__group {
-  flex: 1;
-  display: flex;
-  position: relative;
-  margin-bottom: 20px;
-  flex-direction: column;
-}
+// .form__group {
+//   display: flex;
+//   position: relative;
+//   margin-bottom: 20px;
+//   flex-direction: column;
+// }
 
-.form__label {
-  position: absolute;
-  top: -10px;
-  left: 10px;
-  background-color: #fff;
-  padding: 0 5px;
-  font-size: 14px;
-  color: #000;
-}
+// .form__label {
+//   position: absolute;
+//   top: -10px;
+//   left: 10px;
+//   background-color: #fff;
+//   padding: 0 5px;
+//   font-size: 14px;
+//   color: #000;
+// }
 
-.form__input,
-.form__textarea {
-  padding: 10px;
-  border: 1px solid #000;
-  font-size: 16px;
-  outline: none;
-}
+// .form__input,
+// .form__textarea {
+//   padding: 10px;
+//   border: 1px solid #000;
+//   font-size: 16px;
+//   outline: none;
+// }
 
 .form__group--textarea {
   grid-column: 1 / 3;
@@ -101,6 +123,15 @@
 }
 .error-label {
   color: red;
+}
+
+@media (max-width: 950px) {
+  .form {
+    display: block;
+  }
+  .form__btn {
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 800px) {
